infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ams.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: amsauth-srv
                port:
                  number: 3000
          - path: /api/appointment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: amsappointment-srv
                port:
                  number: 3000
          - path: /api/patientappn/?(.*)
            pathType: Prefix
            backend:
              service:
                name: amspatientappn-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: amsclient-srv
                port:
                  number: 3000
